@@ -2,19 +2,20 @@
 # Maintainer: AndyRTR <andyrtr@archlinux.org>
 
 pkgname=go-openoffice
-pkgver=3.1.0.98.2
-_GOver=3.1.0.98.2 # = 3.1.1.alpha2
-pkgrel=2
+pkgver=3.1.0.99.2
+_GOver=3.1.0.99.2 # = 3.1.1.beta2
+pkgrel=1
 pkgdesc="OpenOffice.org - go-oo.org enhanced version of SUN's office suite"
 arch=('i686' 'x86_64')
 _go_tree="OOO310"
 _dir=DEV300
-_ootag=ooo310-m14 # m11 = OOo 3.1.0 RC2 = final
+_ootag=ooo310-m17 # m11 = OOo 3.1.0 RC2 = final
 license=('LGPL3')
 url="http://go-oo.org/"
 install=${pkgname}.install
-depends=("curl>=7.19.4" "hunspell>=1.2.8" "python>=2.6.1" 'libwpd' 'redland' 
-         'libxaw' "neon>=0.28.3-2" "icu>=4.2" 'hsqldb-java' 'libxslt' 'libxtst' 'desktop-file-utils')
+depends=("curl>=7.19.5" "hunspell>=1.2.8" "python>=2.6.2" 'libwpd' 'redland' 
+         'libxaw' "neon>=0.28.4" "icu>=4.2.1" 'hsqldb-java' 'libxslt' 'libxtst'
+	 'hicolor-icon-theme' 'shared-mime-info' 'desktop-file-utils')
 optdepends=('java-runtime:	adds java support'
             'libcups:		adds printing support'
             'gconf:		adds additional gnome support'
@@ -26,9 +27,9 @@ optdepends=('java-runtime:	adds java support'
 	    'gstreamer0.10-base:	+ some gstr-plugins to support multimedia content, e.g. in impress'
             'kdelibs:		for kde integration')
 makedepends=('automake' 'autoconf' 'wget' 'bison' 'findutils' 'flex' 'gawk' 'gcc-libs' 'libart-lgpl'
-	'pam' 'sane' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.1-2" 'apache-ant' 'cairo' 
-	'gperf' 'libcups' 'pstoedit' 'gconf' "openjdk6>=1.5-4" 'unixodbc' 'mesa>=7.4' 'poppler>=0.10.5'
-	'gstreamer0.10-base>=0.10.22'  'mono>=2.4' 'kdelibs>=4.2.4-2') # 'boost' # 'libjpeg' 
+	'pam' 'sane' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.1.2" 'apache-ant' 'cairo' 
+	'gperf' 'libcups' 'pstoedit' 'gconf' "openjdk6>=1.5-4" 'unixodbc' 'mesa>=7.5' 'poppler>=0.10.7'
+	'gstreamer0.10-base>=0.10.23'  'mono>=2.4.2' 'kdelibs>=4.3.0') # 'boost' # 'libjpeg' 
 provides=('openoffice-base')
 conflicts=('openoffice-base')
 _mirror="http://download.go-oo.org/"
@@ -52,30 +53,30 @@ source=(${_mirror}/${_go_tree}/ooo-build-${_GOver}.tar.gz
 noextract=(ooo-cli-prebuilt-3.1.1.tar.bz2 cairo-1.4.10.tar.gz mdbtools-0.6pre1.tar.gz
 	${_ootag}-{artwork,base,bootstrap,calc,components,extras,filters,help,impress,libs-gui,libs-core,libs-extern,postprocess,sdk,testing,ure,writer,libs-extern-sys,extensions}.tar.bz2
 	extras-3.tar.bz2 biblio.tar.bz2 unowinreg.dll scsolver.2008-10-30.tar.bz2 libwpd-0.8.14.tar.gz libwps-0.1.2.tar.gz libwpg-0.1.3.tar.gz ooo_oxygen_images-2009-06-17.tar.gz)
-md5sums=('dfbc3ee8fa5ff15eb410444d14318ccc'
+md5sums=('8098a6fa0dd08d4664cae7bd56377c58'
          'a1ff3d64d0ca95c62a15c07e7f19f193'
          '222a42af5b874ea15dbafd07b2381aee'
          '5598a5e500ad922e37b159dee72fc993'
          '246e8f38b2a1af1bcff60ee0da59300b'
-         '789ee5206849df922b7143c8ccfd4b18'
-         'f5c8c547ee9b54e508aa315b61ba2e60'
-         '465880993dfe939b3764ca256babf28c'
-         '18ad0289e6be71cb184277fede8764ca'
-         '5d46be51aeabd15f70bfff21647aec3d'
-         'aa85660ea2c5bba251c90ba2d2b4f56e'
-         '55196941a0404703c9e7dee830f0fa24'
-         'bd885c41b054e66c577527d22b755bbf'
-         'f9ed7001c0c53986729c48ce7d2802fc'
-         '1690830ccb31328a5700da2df62d0758'
-         '8e038a4696b4e3b26623a2db63a9e68a'
-         '3d91cf1bc9d1aaf1f7bdb1d99e3f63a6'
-         'd581cee26062307db062a2b5b0b5a955'
-         '9f2a83965054c2c49517dc25ccb2fda1'
-         '5a2696b91919a7654fad1331473eb040'
-         'c97130dc60e948317e00857b3fbec1dd'
-         'f04d375393770d02663ec66fa200a76b'
-         'c7be9586e13cf61459eaed5be2c2c608'
-         '8aff8c7da2b7138bcf800db15e63b617'
+         'a84e835db27ab84071624d0f1880aed8'
+         '9952306fc882cb17106b79613a644b05'
+         '634e283e6de8b6de175d494be22bb618'
+         'd4a99553a91b29976e61b90566af735b'
+         'c5002d3bb95584559483d203a3db2b49'
+         '6e1d95c7f2cce6b191da6aa589cfe6a6'
+         '104b9c30285ebcf65abcfd62f5ca494e'
+         '2cf76d01c3bfe5b4c58656d668c40ca4'
+         '9dc869852bd082e5e936a9a4cf6d07a5'
+         '6bd9d8c6d66e22d678f3bcf88caf51c7'
+         'df13639a72e5fbb05b8287728da2932f'
+         '60634bfe587f2595651528c6e331c54c'
+         'df7a0d06ba0de2a6f92b3b913d009593'
+         'e2f4909047730201ee0a3ffd21e537f3'
+         '557bd0215fa41749adfb79830a84e75a'
+         '248c45aaea866b798d436df1a68d1fa6'
+         '45fb57faced9d432f22b6e76ca179adc'
+         'eb068035a34440270d9fba2dbd63c023'
+         'ea38f43aed5dc40fdf3ebfb0f3c86251'
          '36f323a55ee83e9dc968e1b92569b62a'
          '1948e39a68f12bfa0b7eb309c14d940c'
          'e3a0b76dcd876f3d721ee7183729153d'
@@ -113,8 +114,9 @@ build() {
 	 else EXTRAOPTS="--with-stlport"
 	fi
 
+#	autoreconf
 	./configure --with-distro=ArchLinux \
-		--with-build-version="${_GOver} ArchLinux build-${pkgrel} (${_ootag})" \
+		--with-build-version="${_GOver} ArchLinux build-${pkgrel} (${_ootag})"\
 		--with-srcdir=${srcdir} \
 		--with-max-jobs=${MAKEFLAGS/-j/} \
 		--with-installed-ooo-dirname="${pkgname}" \
@@ -141,6 +143,7 @@ build() {
 		--with-ant-home="/usr/share/java/apache-ant"\
 		$EXTRAOPTS || return 1
 
+#		--with-tag=${_ootag}
 #		--enable-report-builder \
 #		--with-additional-sections="OOXMLExport"
 
