@@ -2,6 +2,7 @@ post_install() {
 
 gtk-update-icon-cache -f -q /usr/share/icons/hicolor
 update-desktop-database -q
+update-mime-database usr/share/mime
 
 echo " see http://wiki.archlinux.org/index.php/Openoffice"
 echo " how to use extensions, e.g. for spell checking"
