@@ -1,3 +1,8 @@
+2009-08-05 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.1.0.99.2-1 :
+	new upstrem release = go-oo 3.1.1 beta 2
+
 2009-07-04 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.1.0.98.2-2 :
